--- a/browser/templates/browser/index.html
+++ b/browser/templates/browser/index.html
@@ -1,8 +1,85 @@
 {# SPDX-License-Identifier: AGPL-3.0-or-later #}
 {% extends "browser/base.html" %}
+{% load django_bootstrap5 %}
+{% load django_tables2 %}
+{% load i18n %}
+{% load l10n %}
 {% block head %}
 <title>SB Browser</title>
 {% endblock head %}
 {% block body %}
-    {% include "browser/table.html" %}
+    <div class="row">
+        <div class="col-12 col-sm-4">
+            <form action={% url 'index' %} method="post">
+                {% csrf_token %}
+                {% bootstrap_form videoidform %}
+                <button type="submit" class="btn btn-primary" name="videoid_go" value="videoid_go">Go</button>
+            </form>
+        </div>
+        <div class="col-12 col-sm-4">
+            <form action={% url 'index' %} method="post">
+                {% csrf_token %}
+                {% bootstrap_form usernameform %}
+                <button type="submit" class="btn btn-primary" name="username_go" value="username_go">Go</button>
+            </form>
+        </div>
+        <div class="col-12 col-sm-4">
+            <form action={% url 'index' %} method="post">
+                {% csrf_token %}
+                {% bootstrap_form useridform %}
+                <button type="submit" class="btn btn-primary" name="userid_go" value="userid_go">Go</button>
+            </form>
+        </div>
+    </div>
+    {% block table %}
+    <div class="row">
+        <div class="col">
+            <table {% render_attrs table.attrs class="table table-hover" %}>
+                {% block table.thead %}
+                {% if table.show_header %}
+                    <thead {{ table.attrs.thead.as_html }}>
+                    <tr>
+                    {% for column in table.columns %}
+                        <th {{ column.attrs.th.as_html }}>
+                            {{ column.header }}
+                        </th>
+                    {% endfor %}
+                    </tr>
+                    </thead>
+                {% endif %}
+                {% endblock table.thead %}
+                {% block table.tbody %}
+                    <tbody {{ table.attrs.tbody.as_html }}>
+                    {% for row in table.paginated_rows %}
+                        {% block table.tbody.row %}
+                        <tr {{ row.attrs.as_html }}>
+                            {% for column, cell in row.items %}
+                                <td {{ column.attrs.td.as_html }}>{% if column.localize == None %}{{ cell }}{% else %}{% if column.localize %}{{ cell|localize }}{% else %}{{ cell|unlocalize }}{% endif %}{% endif %}</td>
+                            {% endfor %}
+                        </tr>
+                        {% endblock table.tbody.row %}
+                    {% empty %}
+                        {% if table.empty_text %}
+                        {% block table.tbody.empty_text %}
+                            <tr><td colspan="{{ table.columns|length }}">{{ table.empty_text }}</td></tr>
+                        {% endblock table.tbody.empty_text %}
+                        {% endif %}
+                    {% endfor %}
+                    </tbody>
+                {% endblock table.tbody %}
+                {% block table.tfoot %}
+                {% if table.has_footer %}
+                <tfoot {{ table.attrs.tfoot.as_html }}>
+                    <tr>
+                    {% for column in table.columns %}
+                        <td {{ column.attrs.tf.as_html }}>{{ column.footer }}</td>
+                    {% endfor %}
+                    </tr>
+                </tfoot>
+                {% endif %}
+                {% endblock table.tfoot %}
+            </table>
+        </div>
+    </div>
+    {% endblock table %}
 {% endblock body %}
