--- a/browser/templates/browser/uuid.html
+++ b/browser/templates/browser/uuid.html
@@ -14,9 +14,10 @@
             <div class="col-auto mt-2">
                 <ul class="list-group">
                     <li class="list-group-item">UUID: {{ uuid.uuid }} <button type="button" class="btn btn-secondary btn-sm clip" data-value="{{ uuid.uuid }}">✂</button></li>
-                    <li class="list-group-item">UserID: <a href="/userid/{{ uuid.user }}/">{{ uuid.user }}</a>{% if vip %}<span title="This user is a VIP" class="ms-1">👑</span>{% endif %}</li>
+                    <li class="list-group-item">UserID: <a href="/userid/{{ uuid.user_id }}/">{{ uuid.user_id }}</a>{% if vip %}<span title="This user is a VIP" class="ms-1">👑</span>{% endif %}</li>
                     <li class="list-group-item">Submitted: {{ submitted }}</li>
                     <li class="list-group-item">{{ starttime }}–{{ endtime }} ({{ length }}) {{ actiontype }} {{ uuid.category }}</li>
+                    {% if uuid.category == 'chapter' %}<li class="list-group-item">Description: {% if uuid.description %}{{ uuid.description }}{% else %}—{% endif %}</li>{% endif %}
                     <li class="list-group-item">Votes: {{ votes }} Views: {{ uuid.views }}</li>
                     <li class="list-group-item">Video duration: {{ duration }} Hidden: {{ uuid_hidden }} Shadowhidden: {{ shadowhidden }}</li>
                     <li class="list-group-item">User Agent: {% if uuid.useragent %}{{ uuid.useragent }}{% else %}—{% endif %}</li>
